--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.2",
     "react-scripts": "1.0.17",
     "tailwindcss": "^0.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:css": "tailwind build src/App.css -o public/app.css",
+    "build": "run-s build:*",
+    "build:css": "tailwind build src/index.css -c ./tailwind.js -o src/index.min.css",
+    "build:js": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "run-s deploy:*",
+    "deploy:js": "yarn build",
+    "deploy:s3": "aws s3 sync --acl public-read --delete build/ s3://emoji.maartendev.me"
   }
 }
